--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -196,7 +196,7 @@
 .dropdown-btn:hover {color: #000;background-color:green;}	
 .menu-group-title {display: block;height:25px;line-height:25px;font-weight:600}
 .menu-link {display: block;padding: 6px 0 4px 0;overflow: hidden;text-decoration:0;color: #2874A6;white-space: nowrap;cursor:pointer;background-color: #58d68d;}
-.sub-menu-link {display: block;text-decoration: none!important;white-space: nowrap;cursor: pointer;line-height: 25px;color: #000;outline: none;padding-left: 10px!important;background-color: #212F3C;}
+.sub-menu-link {display: block;text-decoration: none!important;white-space: nowrap;cursor: pointer;line-height: 25px;color: #000;outline: none;padding-left: 10px!important;background-color: #F7F9F9;}
 .menu-icon {display: block;float: left;width: 50px;height: 40px;line-height: 40px;font-size: 20px;color: red}
 .active {background-color: green;color: white;}	
 .dropdown-container{display: none;background-color: #212F3C/*#d6d6c2*/;}
