--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -198,7 +198,7 @@
 .sub-menu-link {display: block;text-decoration: none!important;white-space: nowrap;cursor: pointer;line-height: 25px;color: #000;outline: none;padding-left: 10px!important;border-radius:4px;}
 .menu-icon {display: block;float: left;width: 50px;height: 40px;line-height: 40px;font-size: 20px;color: red}
 .active {background-color: green;color: white;}	
-.dropdown-container{display: none;background-color: #212F3C/*#d6d6c2*/;}
+.dropdown-container{display: none;background-color: #F7F9F9;}
 .fa-caret-down{float: right;padding-right:8px;padding-top: 3px;}
 
 /*box menu ---------*/
