--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -194,7 +194,7 @@
 .dropdown-btn {padding: 8px 0px 8px 5px;border-bottom: 1px solid #b8b894;}	
 .dropdown-btn:hover {color: #000;background-color:green;}	
 .menu-group-title {display: block;height:25px;line-height:25px;font-weight:600}
-.menu-link {display: block;padding: 6px 0 4px 0;overflow: hidden;text-decoration:0;color: #2874A6;white-space: nowrap;cursor:pointer;background-color: #F7F9F9;}
+.menu-link {display: block;padding: 6px 0 4px 0;overflow: hidden;text-decoration:0;line-height: 25px;color: #2874A6;white-space: nowrap;cursor:pointer;background-color: #F7F9F9;}
 .sub-menu-link {display: block;text-decoration: none!important;white-space: nowrap;cursor: pointer;line-height: 25px;color: #000;outline: none;padding-left: 10px!important;border-radius:4px;}
 .menu-icon {display: block;float: left;width: 50px;height: 40px;line-height: 40px;font-size: 20px;color: red}
 .active {background-color: green;color: white;}	
