--- a/e-imp/asset/css/master.css
+++ b/e-imp/asset/css/master.css
@@ -9,7 +9,10 @@ Programmer		:	Stevanus Andika Nasution
 /*@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');*/
 @import url('fontawesome/css/font-awesome.min.css');
-@import url('navigationMenu.css');
+/*@import url('navigationMenu.css');*/
 @import url('w3.css');
-@import url('navigationMenu.css');
+/*@import url('navigationMenu.css');*/
+
+@import url('header-navigation.css');
+@import url('side-navigation.css');
 @import url('common.css');
