--- a/e-imp/asset/css/logout-navigation.css
+++ b/e-imp/asset/css/logout-navigation.css
@@ -1,8 +1,7 @@
 .logout-div{
-	position: fixed;
-	z-index: 1;
+/*	position: fixed;
+	z-index: 1;*/
 	transition: 0.5s;
-	overflow-x: hidden;
 	border: 1px solid #CCCCFF;
 	top: 80px;
 	width: 250px;
