--- a/e-imp/asset/css/logout-navigation.css
+++ b/e-imp/asset/css/logout-navigation.css
@@ -1,6 +1,6 @@
 .logout-div{
-/*	position: fixed;
-	z-index: 1;*/
+	position: fixed;
+/*	z-index: 1;*/
 	transition: 0.5s;
 	border: 1px solid #CCCCFF;
 	top: 80px;
