--- a/e-imp/asset/css/logout-navigation.css
+++ b/e-imp/asset/css/logout-navigation.css
@@ -1,5 +1,4 @@
 .logout-div{
-	position: fixed;
 /*	z-index: 1;*/
 	transition: 0.5s;
 	border: 1px solid #CCCCFF;
@@ -7,9 +6,9 @@
 	width: 250px;
 	background-color: #F7F9F9;
 	overflow : none;
-	right: -250px;
 	height: 100px;
 	display: block;
+	float: right;
 }
 
 .logout-div a{
