--- a/e-imp/asset/css/header-navigation.css
+++ b/e-imp/asset/css/header-navigation.css
@@ -42,20 +42,10 @@
 	text-decoration: none;
 }
 
-.hide-me{
-	display: none;
-}
-
-.user-menu:hover + .hide-me{
-	position: fixed;
-	transition: 0.5s;
-	border: 1px solid #CCCCFF;
-	top: 240px;
-	width: 250px;
-	background-color: #F7F9F9;
-	overflow : none;
-	height: 100px;
-	display: block;
-	right: 0px;	
+.header .user-menu{
+	font-size: 15px;
+	font-weight: 500;
+	padding: 10px;
+	border: none;
 }	
 	
